--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "minimum-stability": "dev",
     "autoload": {
         "psr-0": {
-            "Wallhack": "src"
+            "Rstore": "src"
         }
     }
 }
