Adding support for sortable properties

--- a/tests/config/models.yaml
+++ b/tests/config/models.yaml
@@ -6,6 +6,7 @@ article:
         default: New article
         type: string
         maxlength: 255
+        sort: true
     url:
         type: string
         maxlength: 255
